# temple-api-gateway

./: .env.example  README.md  pyproject.toml  render.yaml
app/: main.py
app/api/: router.py
app/api/routes/: admin_requests.py  auth.py  health.py  signup_requests.py  status.py  temples.py
app/core/: config.py
app/schemas/: admin_request.py  auth.py  signup_request.py  temple.py
